--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrega un Album!</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Imagine Dragons</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+      </head>
 <body>
-    
-    <div class="AddAlbum"> ¡Agrega un nuevo album!
-        <form action="" method="post">
+    <div class="sidebar">
+        <div class="user">
+          <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
+          <span class="username">Fedusca</span>
+        </div>
+        <div class="menu">
+          <div class="section">
+            <a href="Addalbum.html">
+              agrega albunes
+            </a>
+          </div>
+          <div class="section">
+            <a href="#">
+              Agrega canciones
+            </a>
+          </div>
+          <div class="section">
+            <a href="LogIn.html">
+              Log out
+            </a>
+          </div>
+        </div>
+      </div>
+    <div class="singUp"> 
+        <form action="" method="post" class="form">
+            <p class="title">Agrega un Album! </p>
             <label>Titulo
-                <input type="text" placeholder="Titulo" required>
+                <input type="text" placeholder="Titulo" required  class="input">
             </label>
             <label>Fecha de lanzamiento
-                <input type="date" name="Año">
+                <input type="date" name="Año"  class="input">
             </label>
             <label>Descripcion
-                <textarea name="Descripcion" cols="30" rows="10" placeholder="Descripcion" maxlength="120"></textarea>
+                <textarea name="Descripcion" cols="30" rows="10" placeholder="Descripcion" maxlength="120"  class="input"></textarea>
             </label>
             <label>Imagen de album
-                <input type="text" name="URL Imagen de album">
+                <input type="url" name="Image" placeholder="URL de imagen" class="input">
             </label>
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Enviar" class="submit">
         </form>
     </div>        
 </body>
