Coreccion de errores y dando style

--- a/PlataformaDisco/Evolve.html
+++ b/PlataformaDisco/Evolve.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 <body>
+  <div class="TitleMain">
+    <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
+  </div>
   <div class="sidebar">
     <div class="user">
       <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
@@ -28,6 +31,11 @@
         </a>
       </div>
       <div class="section">
+        <a href="SingUp.html">
+          Iniciar Sesion
+        </a>
+      </div>
+      <div class="section">
         <a href="LogIn.html">
           Log out
         </a>
@@ -36,7 +44,7 @@
   </div>
     <div class="Evolve">
         <h2>Album Evolve</h2>
-        <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" />
+        <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" class="imgEvolve"/>
         <p>
           Evolve (estilizado como ƎVOLVE ) es el tercer álbum de estudio de la
           bandaestadounidense de pop rock Imagine Dragons , lanzado el 23 de junio
