--- a/PlataformaDisco/LogIn.html
+++ b/PlataformaDisco/LogIn.html
@@ -12,7 +12,7 @@
   </head>
   <body class="sing_up">
     <div class="TitleRegis">
-      <img src="TitleLogSing/images.jpeg" alt="">
+      <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
     </div>
     <div class="singUp">
       <form action="" method="post" class="form">
