--- a/PlataformaDisco/index.html
+++ b/PlataformaDisco/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bgIndex">
     <div class="TitleMain">
-      <img src="TitleLogSing/images.jpeg" alt="">
+      <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
     </div>
     <div class="sidebar">
       <div class="user">
@@ -22,7 +22,7 @@
       <div class="menu">
         <div class="section">
           <a href="Addalbum.html">
-            agrega albunes
+            Agrega albunes
           </a>
         </div>
         <div class="section">
@@ -30,6 +30,15 @@
             Agrega canciones
           </a>
         </div>
+        <div class="section">
+        <a href="SingUp.html">
+      Registrarse</a>
+      </div>
+      <div class="section">
+        <a href="LogIn.html">
+          Iniciar Sesion
+        </a>
+      </div class="section">
         <div class="section">
           <a href="LogIn.html">
             Log out
