Finalizacion de Albunes

--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -18,13 +18,18 @@
         </div>
         <div class="menu">
           <div class="section">
-            <a href="Addalbum.html">
-              agrega albunes
+            <a href="index.html">
+              Volver al Inicio
             </a>
           </div>
           <div class="section">
-            <a href="#">
-              Agrega canciones
+            <a href="index.html">
+              Más Albunes
+            </a>
+          </div>
+          <div class="section">
+            <a href="SingUp.html">
+              Iniciar Sesion
             </a>
           </div>
           <div class="section">
