--- a/PlataformaDisco/Evolve.html
+++ b/PlataformaDisco/Evolve.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
-<body>
+<body class="bodyEvolve">
   <div class="TitleMain">
     <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
   </div>
@@ -21,13 +21,18 @@
     </div>
     <div class="menu">
       <div class="section">
+        <a href="index.html">
+          Volver al Inicio
+        </a>
+      </div>
+      <div class="section">
         <a href="Addalbum.html">
           agrega albunes
         </a>
       </div>
       <div class="section">
-        <a href="#">
-          Agrega canciones
+        <a href="index.html">
+          Más Albunes
         </a>
       </div>
       <div class="section">
@@ -43,9 +48,9 @@
     </div>
   </div>
     <div class="Evolve">
-        <h2>Album Evolve</h2>
+        <h2>Album Origin</h2>
         <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" class="imgEvolve"/>
-        <p>
+        <p class="pEvolve">
           Evolve (estilizado como ƎVOLVE ) es el tercer álbum de estudio de la
           bandaestadounidense de pop rock Imagine Dragons , lanzado el 23 de junio
           de 2017 por Kidinakorner e Interscope Records . Luego del lanzamiento de
@@ -66,9 +71,12 @@
           fue nominado al premio Grammy al Mejor Álbum Vocal Pop en la 60ª Entrega
           Anual de los Premios Grammy . [1]
         </p>
-        <h3>Canciones:</h3>
+        </div>
+        <div class="titlesong">
+        <h2>Canciones:</h2>
+        </div>
+        <div class="songList">
         <ol>
-          TrackList
           <li>
             I Don't Know Why
             <audio
@@ -141,50 +149,6 @@
             <audio
               controls
               src="Evolve/Imagine Dragons - Dancing in the Dark.mp3"
-            ></audio>
-          </li>
-        </ol>
-        <ol>
-          Digital-Re relase
-          <li>
-            Next to me
-            <audio
-              controls
-              src="Evolve/Imagine Dragons - Next To Me (Audio).mp3"
-            ></audio>
-          </li>
-        </ol>
-        <ol>
-          Deluxe edition bonus track
-          <li>
-            Levitate
-            <audio
-              controls
-              src="Evolve/Imagine Dragons - Levitate (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Not today
-            <audio
-              controls
-              src="Evolve/Imagine Dragons - Not Today (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Believer (Kaskade Remix)
-            <audio
-              controls
-              src="Evolve/Imagine Dragons - Believer (Kaskade Remix_Audio).mp3"
-            ></audio>
-          </li>
-        </ol>
-        <ol>
-          Japanese edition
-          <li>
-            Root
-            <audio
-              controls
-              src="Evolve/Imagine Dragons - Roots (Audio).mp3"
             ></audio>
           </li>
         </ol>
