Finalizacion Origin.html, agregado de titulo y descipcion en index, MAÑANA USAR TAILWIND PARA HACER EL GRID Y DARLE ESTILO AL INDEX.

--- a/Origins.html
+++ b/Origins.html
@@ -63,81 +63,81 @@
             Natural
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Imagine Dragons - Natural.mp3"
             ></audio>
           </li>
           <li>
             Boomerang
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Boomerang.mp3"
             ></audio>
           </li>
           <li>
             Machine
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Imagine Dragons - Machine (Audio).mp3"
             ></audio>
           </li>
           <li>
             Cool Out
             <audio
-              controls=""
-              src=
+              controls
+              src="PlataformaDisco/Origins/Cool Out.mp3"
             ></audio>
           </li>
           <li>
             Bad Liar
-            <audio controls src=></audio>
+            <audio controls src="PlataformaDisco/Origins/Imagine Dragons - Bad Liar.mp3"></audio>
           </li>
           <li>
             West Coast
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/West Coast.mp3"
             ></audio>
           </li>
           <li>
             Zero
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Imagine Dragons - Zero (From the Original Motion Picture _Ralph Breaks The Internet_).mp3"
             ></audio>
           </li>
           <li>
             Bullet In A Gun
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Bullet In A Gun.mp3"
             ></audio>
           </li>
           <li>
             Digital
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Digital.mp3"
             ></audio>
           </li>
           <li>
             Only
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Only.mp3"
             ></audio>
           </li>
           <li>
             Stuck
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Stuck.mp3"
             ></audio>
           </li>
           <li>
             Love
             <audio
               controls
-              src=
+              src="PlataformaDisco/Origins/Love.mp3"
             ></audio>
           </li>
         </ol>
