--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -54,7 +54,7 @@
             <label>Imagen de album
                 <input type="url" name="Image" placeholder="URL de imagen" class="input">
             </label>
-            <input type="submit" value="Enviar" class="submit">
+            <button type="submit" class="submit" ><a href="">Agregar Album</a></button>
         </form>
     </div>        
 </body>
