--- a/PlataformaDisco/index.html
+++ b/PlataformaDisco/index.html
@@ -6,45 +6,75 @@
     <title>Imagine Dragons</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="bgIndex">
     <div class="TitleMain">
-      <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
+      <img
+        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        alt=""
+        class="imgTitle"
+      />
     </div>
     <div class="sidebar">
       <div class="user">
-        <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
+        <img
+          src="iconoUser/imagine-dragons-lohan.jpg"
+          alt="User Icon"
+          class="userIco"
+        />
         <span class="username">Fedusca</span>
       </div>
       <div class="menu">
         <div class="section">
-          <a href="Addalbum.html">
-            Agrega albunes
-          </a>
+          <a href="Addalbum.html"> Agrega albunes </a>
         </div>
         <div class="section">
-          <a href="#">
-            Agrega canciones
-          </a>
+          <a href="#"> Agrega canciones </a>
         </div>
         <div class="section">
-        <a href="SingUp.html">
-      Registrarse</a>
-      </div>
-      <div class="section">
-        <a href="LogIn.html">
-          Iniciar Sesion
-        </a>
-      </div class="section">
+          <a href="SingUp.html"> Registrarse</a>
+        </div>
         <div class="section">
-          <a href="LogIn.html">
-            Log out
-          </a>
+          <a href="LogIn.html"> Iniciar Sesion </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Log out </a>
         </div>
       </div>
+    </div>
+    <div class="introIndex">
+      <h1>Imagine Dragons</h1>
+      <p>
+        Imagine Dragons es una banda estadounidense de pop rock originaria de
+        Las Vegas, Nevada. Está compuesta por Dan Reynolds (vocalista), Wayne
+        Sermon (guitarrista), Ben McKee (bajista) y Daniel Platzman (baterista).
+        Ganó el reconocimiento mundial con el lanzamiento de su álbum de estudio
+        debut Night Visions (2012), y con su canción "It's Time". Billboard los
+        colocó en la cima de su lista de popularidad del 2013 "Year In Rock", y
+        los llamó «la banda revelación del 2013».6​ La revista Rolling Stone
+        llamó a su canción Radioactive, del álbum Night Visions, «el mayor éxito
+        rock del año».7​8​9​ MTV los llamó «la banda revelación del año».10​
+        "Radioactive" es la segunda canción con más semanas dentro del Billboard
+        Hot 100 en la historia, con un total de 87 semanas. Night Visions
+        alcanzó su punto máximo en el número dos de la lista semanal Billboard
+        200 y en UK Albums Chart. Su segundo álbum de estudio, Smoke + Mirrors,
+        alcanzó el número uno en los Estados Unidos, Canadá y el Reino
+        Unido.11​12​ Imagine Dragons ganó dos American Music Awards por "Artista
+        Alternativo Favorito", un premio Grammy a la mejor interpretación rock,
+        cinco premios Billboard Music Awards y un premio World Music Award. En
+        mayo de 2014, la banda obtuvo un total de catorce nominaciones en
+        diferentes categorías en los Billboard Music Awards, incluyendo "Top
+        Artist of the Year" y un Milestone Award, el cual reconoce la innovación
+        y la creatividad de varios artistas a través de diferentes géneros.
+        Hasta enero de 2017, Imagine Dragons había vendido 9 millones de copias
+        de sus álbumes, y 27 millones en sencillos.13​
+      </p>
     </div>
   </body>
 </html>
