Finalizacion de los 4 albunes, agregar cancion, editrar album, terminando trabajo de tours

--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       </head>
-<body>
+<body class="sing_up">
     <div class="sidebar">
         <div class="user">
           <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
@@ -25,7 +25,13 @@
           <div class="section">
             <a href="index.html">
               Más Albunes
-            </a>
+            </a> 
+          </div>
+          <div class="section">
+            <a href="editAlbum.html"> Editar album </a>
+          </div>
+          <div class="section">
+            <a href="addSong.html"> Agrega canciones </a>
           </div>
           <div class="section">
             <a href="SingUp.html">
