--- a/PlataformaDisco/Evolve.html
+++ b/PlataformaDisco/Evolve.html
@@ -26,9 +26,15 @@
         </a>
       </div>
       <div class="section">
+        <a href="addSong.html"> Agrega canciones </a>
+      </div>
+      <div class="section">
         <a href="Addalbum.html">
           agrega albunes
         </a>
+      </div>
+      <div class="section">
+        <a href="editAlbum.html"> Editar album </a>
       </div>
       <div class="section">
         <a href="index.html">
@@ -79,74 +85,74 @@
         <ol>
           <li>
             I Don't Know Why
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons  I Dont Know Why.mp3"
             ></audio>
           </li>
           <li>
             Whatever it takes
-            <audio
+            <audio  class="song"
               controls
               src="Evolve/Imagine Dragons - Whatever It Takes (Audio).mp3"
             ></audio>
           </li>
           <li>
             Believer
-            <audio
+            <audio  class="song"
               controls
               src="Evolve/Imagine Dragons - Believer (Audio).mp3"
             ></audio>
           </li>
           <li>
             Walking the wire
-            <audio
+            <audio  class="song"
               controls=""
               src="Evolve/Imagine Dragons - Walking The Wire Copy (Audio).mp3"
             ></audio>
           </li>
           <li>
             Rise up
-            <audio controls src="Evolve/Imagine Dragons - Rise Up.mp3"></audio>
+            <audio class="song" controls src="Evolve/Imagine Dragons - Rise Up.mp3"></audio>
           </li>
           <li>
             I'll make it up to you
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3"
             ></audio>
           </li>
           <li>
             Yesterday
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons Yesterday (Audio).mp3"
             ></audio>
           </li>
           <li>
             Mouth of the river
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Mouth Of The River - Imagine Dragons (Audio).mp3"
             ></audio>
           </li>
           <li>
             Thunder
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons - Thunder (Audio).mp3"
             ></audio>
           </li>
           <li>
             Start Over
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons  Start Over [Exclusive].mp3"
             ></audio>
           </li>
           <li>
             Dancing in the dark
-            <audio
+            <audio class="song"
               controls
               src="Evolve/Imagine Dragons - Dancing in the Dark.mp3"
             ></audio>
