--- a/PlataformaDisco/index.html
+++ b/PlataformaDisco/index.html
@@ -11,12 +11,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-    />
+    />  
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bgIndex">
     <div class="TitleMain">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="TitleLogSing/images.jpeg"
         alt=""
         class="imgTitle"
       />
@@ -35,22 +36,29 @@
           <a href="Addalbum.html"> Agrega albunes </a>
         </div>
         <div class="section">
-          <a href="#"> Agrega canciones </a>
+          <a href="editAlbum.html"> Editar album </a>
         </div>
         <div class="section">
-          <a href="SingUp.html"> Registrarse</a>
+          <a href="addSong.html"> Agrega canciones </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="Tours.html"> Tours </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Registrarse</a>
+        </div>
+        <div class="section">
+          <a href="SingUp.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
           <a href="LogIn.html"> Log out </a>
         </div>
       </div>
     </div>
-    <div class="introIndex">
-      <h1>Imagine Dragons</h1>
-      <p>
+    <div class="flex justify-center ">
+
+      
+      <p class="ml-40 mt-8 w-2/5 text-xl font-extrabold  text-yellow-500">
         Imagine Dragons es una banda estadounidense de pop rock originaria de
         Las Vegas, Nevada. Está compuesta por Dan Reynolds (vocalista), Wayne
         Sermon (guitarrista), Ben McKee (bajista) y Daniel Platzman (baterista).
@@ -73,8 +81,40 @@
         Artist of the Year" y un Milestone Award, el cual reconoce la innovación
         y la creatividad de varios artistas a través de diferentes géneros.
         Hasta enero de 2017, Imagine Dragons había vendido 9 millones de copias
-        de sus álbumes, y 27 millones en sencillos.13​
-      </p>
+        de sus álbumes, y 27 millones en sencillos.13​</p>
+        <div class="mt-8 ml-40 grid gap-x-24 gap-y-10 grid-cols-2 text-yellow-500 justify-items-end">
+          <div>
+            <button>
+              <a href="Origins.html">
+                <img src="Origins/Origins_cover.jpg" alt="Tape" class="w-72">
+              </a>
+              Originis
+            </button>
+          </div>
+          <div>
+            <button>
+              <a href="Evolve.html">
+                <img src="Evolve/EVOLVE COVER.jpg" alt="Tape" class="w-72">
+              </a>
+              Evolve
+            </button>
+          </div>
+          <div>
+            <button>
+              <a href="nigthVision.html">
+                <img src="nigthVision/zuyerphzzf04b_600.jpg" alt="Tape" class="w-72">
+              </a>
+              Nigth Vision
+            </button>
+          </div>
+          <div>
+            <button>
+              <a href="smokeMirrors.html">
+                <img src="smokeMirrors/0060254762377_600.jpg" alt="Tape" class="w-72">
+              </a>
+              Smoke Mirrors
+            </button>
+          </div>  
     </div>
   </body>
 </html>
