Finalizacion del proyecto 1ra parte, NO ME SALIO EL RESPONSIVE!

--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -60,7 +60,7 @@
             <label>Imagen de album
                 <input type="url" name="Image" placeholder="URL de imagen" class="input">
             </label>
-            <button type="submit" class="submit" ><a href="">Agregar Album</a></button>
+            <button type="submit" class="submit" ><a href="index.html">Agregar Album</a></button>
         </form>
     </div>        
 </body>
