--- a/PlataformaDisco/index.html
+++ b/PlataformaDisco/index.html
@@ -45,10 +45,10 @@
           <a href="Tours.html"> Tours </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Registrarse</a>
+          <a href="SingUp.html"> Registrarse</a>
         </div>
         <div class="section">
-          <a href="SingUp.html"> Iniciar Sesion </a>
+          <a href="LogIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
           <a href="LogIn.html"> Log out </a>
@@ -65,15 +65,15 @@
         Ganó el reconocimiento mundial con el lanzamiento de su álbum de estudio
         debut Night Visions (2012), y con su canción "It's Time". Billboard los
         colocó en la cima de su lista de popularidad del 2013 "Year In Rock", y
-        los llamó «la banda revelación del 2013».6​ La revista Rolling Stone
+        los llamó «la banda revelación del 2013». La revista Rolling Stone
         llamó a su canción Radioactive, del álbum Night Visions, «el mayor éxito
-        rock del año».7​8​9​ MTV los llamó «la banda revelación del año».10​
+        rock del año».MTV los llamó «la banda revelación del año».10
         "Radioactive" es la segunda canción con más semanas dentro del Billboard
         Hot 100 en la historia, con un total de 87 semanas. Night Visions
         alcanzó su punto máximo en el número dos de la lista semanal Billboard
         200 y en UK Albums Chart. Su segundo álbum de estudio, Smoke + Mirrors,
         alcanzó el número uno en los Estados Unidos, Canadá y el Reino
-        Unido.11​12​ Imagine Dragons ganó dos American Music Awards por "Artista
+        Unido. Imagine Dragons ganó dos American Music Awards por "Artista
         Alternativo Favorito", un premio Grammy a la mejor interpretación rock,
         cinco premios Billboard Music Awards y un premio World Music Award. En
         mayo de 2014, la banda obtuvo un total de catorce nominaciones en
@@ -81,7 +81,7 @@
         Artist of the Year" y un Milestone Award, el cual reconoce la innovación
         y la creatividad de varios artistas a través de diferentes géneros.
         Hasta enero de 2017, Imagine Dragons había vendido 9 millones de copias
-        de sus álbumes, y 27 millones en sencillos.13​</p>
+        de sus álbumes, y 27 millones en sencillos.​</p>
         <div class="mt-8 ml-40 grid gap-x-24 gap-y-10 grid-cols-2 text-yellow-500 justify-items-end">
           <div>
             <button>
