--- a/PlataformaDisco/Tours.html
+++ b/PlataformaDisco/Tours.html
@@ -14,8 +14,8 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bgIndex">
-    <div class="TitleMain">
+  <body class="bgTour">
+    <div class="titleTour">
       <img
         src="TitleLogSing/images.jpeg" 
         alt=""
@@ -24,14 +24,20 @@
     </div>
     <div class="sidebar">
       <div class="user">
-        <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
-          alt="User Icon"
-          class="userIco"
-        />
+        <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
         <span class="username">Fedusca</span>
       </div>
       <div class="menu">
+        <div class="section">
+          <a href="index.html">
+            Volver al Inicio
+          </a>
+        </div>
+        <div class="section">
+          <a href="index.html">
+            Más Albunes
+          </a>
+        </div>
         <div class="section">
           <a href="Addalbum.html"> Agrega albunes </a>
         </div>
@@ -39,32 +45,34 @@
           <a href="editAlbum.html"> Editar album </a>
         </div>
         <div class="section">
-          <a href="addSong.html"> Agrega canciones </a>
+          <a href="SingUp.html">
+            Iniciar Sesion
+          </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Registrarse</a>
-        </div>
-        <div class="section">
-          <a href="SingUp.html"> Iniciar Sesion </a>
-        </div>
-        <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="LogIn.html">
+            Log out
+          </a>
         </div>
       </div>
     </div>
-    <div class="grid grid-rows-5 justify-center bg-white-300 border-2 rounded-lg ml-32">
-        <h1 >Fechas 2024</h1>
-      
-      <div>08/09 Lima, Peru
-        <button><a href="index.html"></a>Buy Ticket</button></div>
-      <div>10/09 Sao Paulo, Brasil
-        <button><a href="index.html"></a>Buy Ticket</button></div>
-      <div>12/09 Buenos Aires, Argentina
-        <button><a href="index.html"></a>Buy Ticket</button></div>
-      <div>14/09 Cordoba, Argentina
-        <button><a href="index.html"></a>Buy ticket</button></div>
-      <div>15/09  Montevideo, Uruguay
-        <button><a href="index.html"></a>Buy ticket</button></div>
-    </div>
+    <div class="Tour ">
+        <h1 class="my-1.5 text-2xl font-bold tracking-wide text-emerald-50">Fechas 2024</h1>
+      <div class="date">
+      <button class="buy"><a href="index.html">Buy Ticket</a></button> <img class="w-10" src="PERU_bANDERA.png" alt="bICO"> <p class="pDate text-lg">08/09 Lima</p>
+      </div>
+      <div class="date">
+        <button class="buy"><a href="index.html">Buy Ticket</a></button> <img class="w-10" src="brasil-bandera-boton.png" alt="bICO"> <p class="pDate text-lg">10/09 Sao Paulo</p>
+      </div>
+      <div class="date">
+        <button class="buy"><a href="index.html">Buy Ticket</a></button> <img class="w-10" src="arg.png" alt="bICO"> <p class="pDate text-lg">12/09 Buenos Aires </p>
+      </div>
+      <div class="date"> 
+        <button class="buy"><a href="index.html">Buy Ticket</a></button> <img class="w-10" src="arg.png" alt="bICO"> <p class="pDate text-lg">14/09 Cordoba</p>
+      </div>
+      <div class="date">
+        <button class="buy"><a href="index.html">Buy ticket</a></button> <img class="w-10" src="e59be84c157b5a4af7e1f3709d4aad8d.png" alt="bICO"> <p class="pDate text-lg">15/09 Montevideo</p>
+      </div>
+</div>
   </body>
 </html>
