correccion de sidebar

--- a/PlataformaDisco/Addalbum.html
+++ b/PlataformaDisco/Addalbum.html
@@ -34,7 +34,7 @@
             <a href="addSong.html"> Agrega canciones </a>
           </div>
           <div class="section">
-            <a href="SingUp.html">
+            <a href="LogIn.html">
               Iniciar Sesion
             </a>
           </div>
