--- a/PlataformaDisco/addSong.html
+++ b/PlataformaDisco/addSong.html
@@ -34,7 +34,7 @@
             <a href="editAlbum.html"> Editar album </a>
           </div>
           <div class="section">
-            <a href="SingUp.html">
+            <a href="LogIn.html">
               Iniciar Sesion
             </a>
           </div>
