--- a/PlataformaDisco/editAlbum.html
+++ b/PlataformaDisco/editAlbum.html
@@ -31,7 +31,7 @@
             <a href="Addalbum.html"> Agrega albunes </a>
           </div>
           <div class="section">
-            <a href="SingUp.html">
+            <a href="LogIn.html">
               Iniciar Sesion
             </a>
           </div>
