--- a/PlataformaDisco/nigthVision.html
+++ b/PlataformaDisco/nigthVision.html
@@ -47,7 +47,7 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="SingUp.html"> Iniciar Sesion </a>
+          <a href="LogIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
           <a href="LogIn.html"> Log out </a>
