--- a/PlataformaDisco/Origins.html
+++ b/PlataformaDisco/Origins.html
@@ -42,7 +42,7 @@
         </a>
       </div>
       <div class="section">
-        <a href="SingUp.html">
+        <a href="LogIn.html">
           Iniciar Sesion
         </a>
       </div>
