Finalizacion de arreglos punto 1

--- a/PlataformaDisco/Tours.html
+++ b/PlataformaDisco/Tours.html
@@ -59,22 +59,22 @@
       <div class="date">
         <h1>08/09/24 Lima</h1>
         <img class="w-10" src="PERU_bANDERA.png" alt="bICO" />
-        <button class="buy" lugar="Peru">Comprar entrada</button>
+        <button class="buy" lugar="Lima">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>10/09 Sao Paulo</h1>
         <img class="w-10" src="brasil-bandera-boton.png" alt="bICO" />
-        <button class="buy">Comprar entrada</button>
+        <button class="buy" lugar="Sao Paulo">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>12/09 Buenos Aires</h1>
         <img class="w-10" src="arg.png" alt="bICO" />
-        <button class="buy">Comprar entrada</button>
+        <button class="buy" lugar="Buenos Aires">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>14/09 Cordoba</h1>
         <img class="w-10" src="arg.png" alt="bICO" />
-        <button class="buy">Comprar entrada</button>
+        <button class="buy" lugar="Cordoba">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>15/09 Montevideo</h1>
@@ -83,7 +83,7 @@
           src="e59be84c157b5a4af7e1f3709d4aad8d.png"
           alt="bICO"
         />
-        <button class="buy">Comprar entrada</button>
+        <button class="buy" lugar="Montevideo">Comprar entrada</button>
       </div>
     </div>
     <script src="tours.js"></script>
