Algunos arreglos de button y submit

--- a/PlataformaDisco/LogIn.html
+++ b/PlataformaDisco/LogIn.html
@@ -37,7 +37,9 @@
             class="input"
           />
         </label>
-        <button type="submit" class="submit" ><a href="index.html">Inicia Sesion</a></button>
+        <a href="index.html" class="button">
+          Inicia Sesión
+        </a>
         <p class="signin">¿Todavia no te registraste? <a href="SingUp.html">Registrate aqui!</a> </p>
       </form>
     </div>
