--- a/PlataformaDisco/SingUp.html
+++ b/PlataformaDisco/SingUp.html
@@ -60,7 +60,7 @@
                 class="input"
               />
             </label>
-            <button type="submit" class="submit" ><a href="index.html">Registrarse</a></button>
+            <a href="index.html" class="button">Registrarse</a>
 
         </form>
       </div>
