--- a/PlataformaDisco/addSong.html
+++ b/PlataformaDisco/addSong.html
@@ -60,7 +60,9 @@
             <label>Imagen de album
                 <input type="url" name="Image" placeholder="URL de imagen" class="input">
             </label>
-            <button type="submit" class="submit" ><a href="index.html">Agregar cancion</a></button>
+            <a href="index.html" class="button">
+              Agregar canción
+            </a>
         </form>
     </div>        
 </body>
