--- a/PlataformaDisco/index.html
+++ b/PlataformaDisco/index.html
@@ -84,36 +84,31 @@
         de sus álbumes, y 27 millones en sencillos.​</p>
         <div class="mt-8 ml-40 grid gap-x-24 gap-y-10 grid-cols-2 text-yellow-500 justify-items-end">
           <div>
-            <button>
-              <a href="Origins.html">
-                <img src="Origins/Origins_cover.jpg" alt="Tape" class="w-72">
-              </a>
-              Originis
-            </button>
+            <a href="Origins.html">
+              <img src="Origins/Origins_cover.jpg" alt="Tape" class="w-72 h-auto">
+              <p>Origins</p>
+            </a>
           </div>
-          <div>
-            <button>
-              <a href="Evolve.html">
-                <img src="Evolve/EVOLVE COVER.jpg" alt="Tape" class="w-72">
-              </a>
-              Evolve
-            </button>
+          <div onclick="window.location.href='Evolve.html'">
+            <a href="Evolve.html">
+              <img src="Evolve/EVOLVE COVER.jpg" alt="Tape" class="w-72">
+            </a>
+            Evolve
           </div>
-          <div>
-            <button>
-              <a href="nigthVision.html">
-                <img src="nigthVision/zuyerphzzf04b_600.jpg" alt="Tape" class="w-72">
-              </a>
-              Nigth Vision
-            </button>
+          
+          <div onclick="window.location.href='nigthVision.html'">
+            <a href="nigthVision.html">
+              <img src="nigthVision/zuyerphzzf04b_600.jpg" alt="Tape" class="w-72">
+            </a>
+            Night Vision
           </div>
-          <div>
-            <button>
-              <a href="smokeMirrors.html">
-                <img src="smokeMirrors/0060254762377_600.jpg" alt="Tape" class="w-72">
-              </a>
-              Smoke Mirrors
-            </button>
+          
+          <div onclick="window.location.href='smokeMirrors.html'">
+            <a href="smokeMirrors.html">
+              <img src="smokeMirrors/0060254762377_600.jpg" alt="Tape" class="w-72">
+            </a>
+            Smoke Mirrors
+          </div>
           </div>  
     </div>
   </body>
